--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
             <h1>O futuro brilhante da Web 3.0?</h1>
 
             <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos dadas das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
-            <button>ler mais</button>
+        <button>ler mais</button>
+        </section>
+
+        <section>
+            <h2>Novo</h2>
+
+           <div>
+               <h3>Hidrogenio VS Carros Elétricos</h3>
+               <p>Os carros movidos a hudrogenio alguma vez alcançarão os veiculos elétricos?</p>
+           </div>
+           <div>
+             <h3>A arte gerada por IA</h3>
+             <p>Quais são os possíveis efeitos adversos da geração de imagens por IA sob demanda?</p>
+           </div>
+           <div>
+              <h3>O VC Funding está esgotado?</h3>
+             <p>O financiamento privado por empresas de capital de risco caiu 50%.</p>
+           </div>
         </section>
     </main>
 </body>
