--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="primeira-secao">
             <img src="./assets/images/image-web-3-mobile.jpg" alt="icone de puxxle colorido">
             <h1>O futuro brilhante da Web 3.0?</h1>
 
