--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <title>W. Noticias</title>
 </head>
-<body>
+<body class="menu-open">
     <header class="header-mobile">
         <img src="./assets/images/logo.svg" alt="Logo do site de noticias W.">
 
@@ -18,11 +18,16 @@
         </button>
 
         <nav>
+            <button>
+              <img src="./assets/images/icon-menu-close.svg" alt="icone de x para fechat o menu">
+
+            </button>
+
             <a href="#">Home</a>
             <a href="#">Novo</a>
             <a href="#">Popular</a>
             <a href="#">Trending</a>
-            <a href="#">ategorias</a>
+            <a href="#">Categorias</a>
         </nav>
     </header>
 
